--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,16 @@ jobs:
             arch: amd64
             ext: ""
           - os: linux
+            arch: 386
+            ext: ""
+          - os: linux
             arch: arm64
             ext: ""
           - os: windows
             arch: amd64
+            ext: ".exe"
+          - os: windows
+            arch: 386
             ext: ".exe"
           - os: windows
             arch: arm64
